commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.fivearrowsset.yml
+++ b/docs/docs-ref-autogen/excel/excel.fivearrowsset.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 10158115bdf229958fd95666d5f00160cf1f4ea5
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: 5ad4d3e1b913dbb608c3ed1ac6ee72e0a10e33a1
+ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29978852"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "30098514"
 items:
 - uid: excel.Excel.FiveArrowsSet
   name: Excel.FiveArrowsSet
@@ -29,7 +29,7 @@ items:
     content: 'greenUpArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FiveArrowsSet.redDownArrow
   name: redDownArrow
   fullName: redDownArrow
@@ -40,7 +40,7 @@ items:
     content: 'redDownArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FiveArrowsSet.yellowDownInclineArrow
   name: yellowDownInclineArrow
   fullName: yellowDownInclineArrow
@@ -51,7 +51,7 @@ items:
     content: 'yellowDownInclineArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FiveArrowsSet.yellowSideArrow
   name: yellowSideArrow
   fullName: yellowSideArrow
@@ -62,7 +62,7 @@ items:
     content: 'yellowSideArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FiveArrowsSet.yellowUpInclineArrow
   name: yellowUpInclineArrow
   fullName: yellowUpInclineArrow
@@ -73,4 +73,4 @@ items:
     content: 'yellowUpInclineArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
