--- a/docs/docs-ref-autogen/excel/excel.fiveratingset.yml
+++ b/docs/docs-ref-autogen/excel/excel.fiveratingset.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 947db0b89414cdc55b5d62adb6d2c3c8cdcb6c1d
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: 6006536bb87efaa03678d8a5edc92b1723044247
+ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29978796"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "30093880"
 items:
 - uid: excel.Excel.FiveRatingSet
   name: Excel.FiveRatingSet
@@ -29,7 +29,7 @@ items:
     content: 'fourBars: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FiveRatingSet.noBars
   name: noBars
   fullName: noBars
@@ -40,7 +40,7 @@ items:
     content: 'noBars: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FiveRatingSet.oneBar
   name: oneBar
   fullName: oneBar
@@ -51,7 +51,7 @@ items:
     content: 'oneBar: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FiveRatingSet.threeBars
   name: threeBars
   fullName: threeBars
@@ -62,7 +62,7 @@ items:
     content: 'threeBars: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FiveRatingSet.twoBars
   name: twoBars
   fullName: twoBars
@@ -73,4 +73,4 @@ items:
     content: 'twoBars: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
