--- a/docs/docs-ref-autogen/excel/excel.fourarrowsgrayset.yml
+++ b/docs/docs-ref-autogen/excel/excel.fourarrowsgrayset.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6f7465959c12026dceab5ae567cf7a854b96e750
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: e27493fb7402584eab916930329e5fa2c1b98d35
+ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29980987"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "30093257"
 items:
 - uid: excel.Excel.FourArrowsGraySet
   name: Excel.FourArrowsGraySet
@@ -28,7 +28,7 @@ items:
     content: 'grayDownArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FourArrowsGraySet.grayDownInclineArrow
   name: grayDownInclineArrow
   fullName: grayDownInclineArrow
@@ -39,7 +39,7 @@ items:
     content: 'grayDownInclineArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FourArrowsGraySet.grayUpArrow
   name: grayUpArrow
   fullName: grayUpArrow
@@ -50,7 +50,7 @@ items:
     content: 'grayUpArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
 - uid: excel.Excel.FourArrowsGraySet.grayUpInclineArrow
   name: grayUpInclineArrow
   fullName: grayUpInclineArrow
@@ -61,4 +61,4 @@ items:
     content: 'grayUpInclineArrow: Icon;'
     return:
       type:
-      - excel.Excel.Icon
+      - Icon
