--- a/docs/docs-ref-autogen/excel_release/excel.fivearrowsgrayset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.fivearrowsgrayset.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 21d317b24703fff5eedcb6bc58906afb336f1ac6
+ms.openlocfilehash: 4f17a0a623d8c377d7edf16e5d11dab0dbdf919c
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30095042"
+ms.locfileid: "30116946"
 items:
-- uid: excel.Excel.FiveArrowsGraySet
+- uid: excel_release.Excel.FiveArrowsGraySet
   name: Excel.FiveArrowsGraySet
   fullName: Excel.FiveArrowsGraySet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.FiveArrowsGraySet.grayDownArrow
-  - excel.Excel.FiveArrowsGraySet.grayDownInclineArrow
-  - excel.Excel.FiveArrowsGraySet.graySideArrow
-  - excel.Excel.FiveArrowsGraySet.grayUpArrow
-  - excel.Excel.FiveArrowsGraySet.grayUpInclineArrow
-- uid: excel.Excel.FiveArrowsGraySet.grayDownArrow
+  - excel_release.Excel.FiveArrowsGraySet.grayDownArrow
+  - excel_release.Excel.FiveArrowsGraySet.grayDownInclineArrow
+  - excel_release.Excel.FiveArrowsGraySet.graySideArrow
+  - excel_release.Excel.FiveArrowsGraySet.grayUpArrow
+  - excel_release.Excel.FiveArrowsGraySet.grayUpInclineArrow
+- uid: excel_release.Excel.FiveArrowsGraySet.grayDownArrow
   name: grayDownArrow
   fullName: grayDownArrow
   langs:
@@ -30,7 +30,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveArrowsGraySet.grayDownInclineArrow
+- uid: excel_release.Excel.FiveArrowsGraySet.grayDownInclineArrow
   name: grayDownInclineArrow
   fullName: grayDownInclineArrow
   langs:
@@ -41,7 +41,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveArrowsGraySet.graySideArrow
+- uid: excel_release.Excel.FiveArrowsGraySet.graySideArrow
   name: graySideArrow
   fullName: graySideArrow
   langs:
@@ -52,7 +52,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveArrowsGraySet.grayUpArrow
+- uid: excel_release.Excel.FiveArrowsGraySet.grayUpArrow
   name: grayUpArrow
   fullName: grayUpArrow
   langs:
@@ -63,7 +63,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveArrowsGraySet.grayUpInclineArrow
+- uid: excel_release.Excel.FiveArrowsGraySet.grayUpInclineArrow
   name: grayUpInclineArrow
   fullName: grayUpInclineArrow
   langs:
