--- a/docs/docs-ref-autogen/excel_release/excel.fivearrowsset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.fivearrowsset.yml
@@ -1,24 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 96e12057241c832179e8cd4a9eaa02296787df14
+ms.openlocfilehash: 313409d5b6572b43191ae123418e902420ef7bc8
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30094867"
+ms.locfileid: "30110660"
 items:
-- uid: excel.Excel.FourArrowsSet
-  name: Excel.FourArrowsSet
-  fullName: Excel.FourArrowsSet
+- uid: excel_release.Excel.FiveArrowsSet
+  name: Excel.FiveArrowsSet
+  fullName: Excel.FiveArrowsSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.FourArrowsSet.greenUpArrow
-  - excel.Excel.FourArrowsSet.redDownArrow
-  - excel.Excel.FourArrowsSet.yellowDownInclineArrow
-  - excel.Excel.FourArrowsSet.yellowUpInclineArrow
-- uid: excel.Excel.FourArrowsSet.greenUpArrow
+  - excel_release.Excel.FiveArrowsSet.greenUpArrow
+  - excel_release.Excel.FiveArrowsSet.redDownArrow
+  - excel_release.Excel.FiveArrowsSet.yellowDownInclineArrow
+  - excel_release.Excel.FiveArrowsSet.yellowSideArrow
+  - excel_release.Excel.FiveArrowsSet.yellowUpInclineArrow
+- uid: excel_release.Excel.FiveArrowsSet.greenUpArrow
   name: greenUpArrow
   fullName: greenUpArrow
   langs:
@@ -29,7 +30,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourArrowsSet.redDownArrow
+- uid: excel_release.Excel.FiveArrowsSet.redDownArrow
   name: redDownArrow
   fullName: redDownArrow
   langs:
@@ -40,7 +41,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourArrowsSet.yellowDownInclineArrow
+- uid: excel_release.Excel.FiveArrowsSet.yellowDownInclineArrow
   name: yellowDownInclineArrow
   fullName: yellowDownInclineArrow
   langs:
@@ -51,7 +52,18 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourArrowsSet.yellowUpInclineArrow
+- uid: excel_release.Excel.FiveArrowsSet.yellowSideArrow
+  name: yellowSideArrow
+  fullName: yellowSideArrow
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'yellowSideArrow: Icon;'
+    return:
+      type:
+      - Icon
+- uid: excel_release.Excel.FiveArrowsSet.yellowUpInclineArrow
   name: yellowUpInclineArrow
   fullName: yellowUpInclineArrow
   langs:
