--- a/docs/docs-ref-autogen/excel_release/excel.fiveboxesset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.fiveboxesset.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: bbd52fbd68a4bf740b68aec0aafc2f986a053ad4
+ms.openlocfilehash: 2f5605c6b59a3ce0a7104c3f0fe5581a539fadc0
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30096281"
+ms.locfileid: "30117534"
 items:
-- uid: excel.Excel.FiveBoxesSet
+- uid: excel_release.Excel.FiveBoxesSet
   name: Excel.FiveBoxesSet
   fullName: Excel.FiveBoxesSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.FiveBoxesSet.fourFilledBoxes
-  - excel.Excel.FiveBoxesSet.noFilledBoxes
-  - excel.Excel.FiveBoxesSet.oneFilledBox
-  - excel.Excel.FiveBoxesSet.threeFilledBoxes
-  - excel.Excel.FiveBoxesSet.twoFilledBoxes
-- uid: excel.Excel.FiveBoxesSet.fourFilledBoxes
+  - excel_release.Excel.FiveBoxesSet.fourFilledBoxes
+  - excel_release.Excel.FiveBoxesSet.noFilledBoxes
+  - excel_release.Excel.FiveBoxesSet.oneFilledBox
+  - excel_release.Excel.FiveBoxesSet.threeFilledBoxes
+  - excel_release.Excel.FiveBoxesSet.twoFilledBoxes
+- uid: excel_release.Excel.FiveBoxesSet.fourFilledBoxes
   name: fourFilledBoxes
   fullName: fourFilledBoxes
   langs:
@@ -30,7 +30,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveBoxesSet.noFilledBoxes
+- uid: excel_release.Excel.FiveBoxesSet.noFilledBoxes
   name: noFilledBoxes
   fullName: noFilledBoxes
   langs:
@@ -41,7 +41,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveBoxesSet.oneFilledBox
+- uid: excel_release.Excel.FiveBoxesSet.oneFilledBox
   name: oneFilledBox
   fullName: oneFilledBox
   langs:
@@ -52,7 +52,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveBoxesSet.threeFilledBoxes
+- uid: excel_release.Excel.FiveBoxesSet.threeFilledBoxes
   name: threeFilledBoxes
   fullName: threeFilledBoxes
   langs:
@@ -63,7 +63,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveBoxesSet.twoFilledBoxes
+- uid: excel_release.Excel.FiveBoxesSet.twoFilledBoxes
   name: twoFilledBoxes
   fullName: twoFilledBoxes
   langs:
