--- a/docs/docs-ref-autogen/excel_release/excel.fourarrowsset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.fourarrowsset.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 96e12057241c832179e8cd4a9eaa02296787df14
+ms.openlocfilehash: 5bd561779c904f1007e28f50c9efb74a77106713
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30094867"
+ms.locfileid: "30110604"
 items:
-- uid: excel.Excel.FourArrowsSet
+- uid: excel_release.Excel.FourArrowsSet
   name: Excel.FourArrowsSet
   fullName: Excel.FourArrowsSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.FourArrowsSet.greenUpArrow
-  - excel.Excel.FourArrowsSet.redDownArrow
-  - excel.Excel.FourArrowsSet.yellowDownInclineArrow
-  - excel.Excel.FourArrowsSet.yellowUpInclineArrow
-- uid: excel.Excel.FourArrowsSet.greenUpArrow
+  - excel_release.Excel.FourArrowsSet.greenUpArrow
+  - excel_release.Excel.FourArrowsSet.redDownArrow
+  - excel_release.Excel.FourArrowsSet.yellowDownInclineArrow
+  - excel_release.Excel.FourArrowsSet.yellowUpInclineArrow
+- uid: excel_release.Excel.FourArrowsSet.greenUpArrow
   name: greenUpArrow
   fullName: greenUpArrow
   langs:
@@ -29,7 +29,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourArrowsSet.redDownArrow
+- uid: excel_release.Excel.FourArrowsSet.redDownArrow
   name: redDownArrow
   fullName: redDownArrow
   langs:
@@ -40,7 +40,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourArrowsSet.yellowDownInclineArrow
+- uid: excel_release.Excel.FourArrowsSet.yellowDownInclineArrow
   name: yellowDownInclineArrow
   fullName: yellowDownInclineArrow
   langs:
@@ -51,7 +51,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourArrowsSet.yellowUpInclineArrow
+- uid: excel_release.Excel.FourArrowsSet.yellowUpInclineArrow
   name: yellowUpInclineArrow
   fullName: yellowUpInclineArrow
   langs:
