--- a/docs/docs-ref-autogen/excel_release/excel.fourtrafficlightsset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.fourtrafficlightsset.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9a6f1b4102e1f0b2bf82aeb98d9a20348ebd1970
+ms.openlocfilehash: f09f106374b2c52b2bc8a20ee40b5b68da5ffa74
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30097079"
+ms.locfileid: "30114923"
 items:
-- uid: excel.Excel.FourTrafficLightsSet
+- uid: excel_release.Excel.FourTrafficLightsSet
   name: Excel.FourTrafficLightsSet
   fullName: Excel.FourTrafficLightsSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.FourTrafficLightsSet.blackCircleWithBorder
-  - excel.Excel.FourTrafficLightsSet.greenCircle
-  - excel.Excel.FourTrafficLightsSet.redCircleWithBorder
-  - excel.Excel.FourTrafficLightsSet.yellowCircle
-- uid: excel.Excel.FourTrafficLightsSet.blackCircleWithBorder
+  - excel_release.Excel.FourTrafficLightsSet.blackCircleWithBorder
+  - excel_release.Excel.FourTrafficLightsSet.greenCircle
+  - excel_release.Excel.FourTrafficLightsSet.redCircleWithBorder
+  - excel_release.Excel.FourTrafficLightsSet.yellowCircle
+- uid: excel_release.Excel.FourTrafficLightsSet.blackCircleWithBorder
   name: blackCircleWithBorder
   fullName: blackCircleWithBorder
   langs:
@@ -29,7 +29,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourTrafficLightsSet.greenCircle
+- uid: excel_release.Excel.FourTrafficLightsSet.greenCircle
   name: greenCircle
   fullName: greenCircle
   langs:
@@ -40,7 +40,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourTrafficLightsSet.redCircleWithBorder
+- uid: excel_release.Excel.FourTrafficLightsSet.redCircleWithBorder
   name: redCircleWithBorder
   fullName: redCircleWithBorder
   langs:
@@ -51,7 +51,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourTrafficLightsSet.yellowCircle
+- uid: excel_release.Excel.FourTrafficLightsSet.yellowCircle
   name: yellowCircle
   fullName: yellowCircle
   langs:
