--- a/docs/docs-ref-autogen/excel_release/excel.threearrowsgrayset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.threearrowsgrayset.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9b5274a8d4909101104822a04d93b5155aba15cb
+ms.openlocfilehash: 57636f53657ef501009a64bee1b73ba6d48b7972
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098717"
+ms.locfileid: "30112501"
 items:
-- uid: excel.Excel.ThreeArrowsGraySet
+- uid: excel_release.Excel.ThreeArrowsGraySet
   name: Excel.ThreeArrowsGraySet
   fullName: Excel.ThreeArrowsGraySet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.ThreeArrowsGraySet.grayDownArrow
-  - excel.Excel.ThreeArrowsGraySet.graySideArrow
-  - excel.Excel.ThreeArrowsGraySet.grayUpArrow
-- uid: excel.Excel.ThreeArrowsGraySet.grayDownArrow
+  - excel_release.Excel.ThreeArrowsGraySet.grayDownArrow
+  - excel_release.Excel.ThreeArrowsGraySet.graySideArrow
+  - excel_release.Excel.ThreeArrowsGraySet.grayUpArrow
+- uid: excel_release.Excel.ThreeArrowsGraySet.grayDownArrow
   name: grayDownArrow
   fullName: grayDownArrow
   langs:
@@ -28,7 +28,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeArrowsGraySet.graySideArrow
+- uid: excel_release.Excel.ThreeArrowsGraySet.graySideArrow
   name: graySideArrow
   fullName: graySideArrow
   langs:
@@ -39,7 +39,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeArrowsGraySet.grayUpArrow
+- uid: excel_release.Excel.ThreeArrowsGraySet.grayUpArrow
   name: grayUpArrow
   fullName: grayUpArrow
   langs:
