--- a/docs/docs-ref-autogen/excel_release/excel.threesignsset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.threesignsset.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e681e4f55cf8668d3c27dbfe8b542e46eebd9153
+ms.openlocfilehash: ce1abf01240feefc85e4f0458be9c5c7fc588d28
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30097884"
+ms.locfileid: "30113488"
 items:
-- uid: excel.Excel.ThreeSignsSet
+- uid: excel_release.Excel.ThreeSignsSet
   name: Excel.ThreeSignsSet
   fullName: Excel.ThreeSignsSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.ThreeSignsSet.greenCircle
-  - excel.Excel.ThreeSignsSet.redDiamond
-  - excel.Excel.ThreeSignsSet.yellowTriangle
-- uid: excel.Excel.ThreeSignsSet.greenCircle
+  - excel_release.Excel.ThreeSignsSet.greenCircle
+  - excel_release.Excel.ThreeSignsSet.redDiamond
+  - excel_release.Excel.ThreeSignsSet.yellowTriangle
+- uid: excel_release.Excel.ThreeSignsSet.greenCircle
   name: greenCircle
   fullName: greenCircle
   langs:
@@ -28,7 +28,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeSignsSet.redDiamond
+- uid: excel_release.Excel.ThreeSignsSet.redDiamond
   name: redDiamond
   fullName: redDiamond
   langs:
@@ -39,7 +39,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeSignsSet.yellowTriangle
+- uid: excel_release.Excel.ThreeSignsSet.yellowTriangle
   name: yellowTriangle
   fullName: yellowTriangle
   langs:
