--- a/docs/docs-ref-autogen/excel_release/excel.threetrafficlights1set.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.threetrafficlights1set.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 35ef51f54626d045cb3ed4538f649430930fc12d
+ms.openlocfilehash: 36d7c2f8056c2f18855282ed40ba463929054f30
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30097401"
+ms.locfileid: "30110163"
 items:
-- uid: excel.Excel.ThreeTrafficLights1Set
+- uid: excel_release.Excel.ThreeTrafficLights1Set
   name: Excel.ThreeTrafficLights1Set
   fullName: Excel.ThreeTrafficLights1Set
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.ThreeTrafficLights1Set.greenCircle
-  - excel.Excel.ThreeTrafficLights1Set.redCircleWithBorder
-  - excel.Excel.ThreeTrafficLights1Set.yellowCircle
-- uid: excel.Excel.ThreeTrafficLights1Set.greenCircle
+  - excel_release.Excel.ThreeTrafficLights1Set.greenCircle
+  - excel_release.Excel.ThreeTrafficLights1Set.redCircleWithBorder
+  - excel_release.Excel.ThreeTrafficLights1Set.yellowCircle
+- uid: excel_release.Excel.ThreeTrafficLights1Set.greenCircle
   name: greenCircle
   fullName: greenCircle
   langs:
@@ -28,7 +28,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeTrafficLights1Set.redCircleWithBorder
+- uid: excel_release.Excel.ThreeTrafficLights1Set.redCircleWithBorder
   name: redCircleWithBorder
   fullName: redCircleWithBorder
   langs:
@@ -39,7 +39,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeTrafficLights1Set.yellowCircle
+- uid: excel_release.Excel.ThreeTrafficLights1Set.yellowCircle
   name: yellowCircle
   fullName: yellowCircle
   langs:
