--- a/docs/docs-ref-autogen/excel_release/excel.fiveratingset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.fiveratingset.yml
@@ -1,24 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f751c1ab21d3865d54fca6d18c9f87978f93d4d8
+ms.openlocfilehash: e4dd1b16d914da24cde832f68e6bf48633a000e7
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30092991"
+ms.locfileid: "30114195"
 items:
-- uid: excel.Excel.FourRatingSet
-  name: Excel.FourRatingSet
-  fullName: Excel.FourRatingSet
+- uid: excel_release.Excel.FiveRatingSet
+  name: Excel.FiveRatingSet
+  fullName: Excel.FiveRatingSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.FourRatingSet.fourBars
-  - excel.Excel.FourRatingSet.oneBar
-  - excel.Excel.FourRatingSet.threeBars
-  - excel.Excel.FourRatingSet.twoBars
-- uid: excel.Excel.FourRatingSet.fourBars
+  - excel_release.Excel.FiveRatingSet.fourBars
+  - excel_release.Excel.FiveRatingSet.noBars
+  - excel_release.Excel.FiveRatingSet.oneBar
+  - excel_release.Excel.FiveRatingSet.threeBars
+  - excel_release.Excel.FiveRatingSet.twoBars
+- uid: excel_release.Excel.FiveRatingSet.fourBars
   name: fourBars
   fullName: fourBars
   langs:
@@ -29,7 +30,18 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourRatingSet.oneBar
+- uid: excel_release.Excel.FiveRatingSet.noBars
+  name: noBars
+  fullName: noBars
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'noBars: Icon;'
+    return:
+      type:
+      - Icon
+- uid: excel_release.Excel.FiveRatingSet.oneBar
   name: oneBar
   fullName: oneBar
   langs:
@@ -40,7 +52,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourRatingSet.threeBars
+- uid: excel_release.Excel.FiveRatingSet.threeBars
   name: threeBars
   fullName: threeBars
   langs:
@@ -51,7 +63,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourRatingSet.twoBars
+- uid: excel_release.Excel.FiveRatingSet.twoBars
   name: twoBars
   fullName: twoBars
   langs:
