--- a/docs/docs-ref-autogen/excel_release/excel.fourredtoblackset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.fourredtoblackset.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 66c931bd9986bb8037b02d1601a4e9dc9e673aa1
+ms.openlocfilehash: 31bc21cf0d29435face7c94b58cb42f7fe1156c8
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30095406"
+ms.locfileid: "30109526"
 items:
-- uid: excel.Excel.FourRedToBlackSet
+- uid: excel_release.Excel.FourRedToBlackSet
   name: Excel.FourRedToBlackSet
   fullName: Excel.FourRedToBlackSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.FourRedToBlackSet.blackCircle
-  - excel.Excel.FourRedToBlackSet.grayCircle
-  - excel.Excel.FourRedToBlackSet.pinkCircle
-  - excel.Excel.FourRedToBlackSet.redCircle
-- uid: excel.Excel.FourRedToBlackSet.blackCircle
+  - excel_release.Excel.FourRedToBlackSet.blackCircle
+  - excel_release.Excel.FourRedToBlackSet.grayCircle
+  - excel_release.Excel.FourRedToBlackSet.pinkCircle
+  - excel_release.Excel.FourRedToBlackSet.redCircle
+- uid: excel_release.Excel.FourRedToBlackSet.blackCircle
   name: blackCircle
   fullName: blackCircle
   langs:
@@ -29,7 +29,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourRedToBlackSet.grayCircle
+- uid: excel_release.Excel.FourRedToBlackSet.grayCircle
   name: grayCircle
   fullName: grayCircle
   langs:
@@ -40,7 +40,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourRedToBlackSet.pinkCircle
+- uid: excel_release.Excel.FourRedToBlackSet.pinkCircle
   name: pinkCircle
   fullName: pinkCircle
   langs:
@@ -51,7 +51,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FourRedToBlackSet.redCircle
+- uid: excel_release.Excel.FourRedToBlackSet.redCircle
   name: redCircle
   fullName: redCircle
   langs:
