--- a/docs/docs-ref-autogen/excel_release/excel.iconcollections.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.iconcollections.yml
@@ -1,40 +1,40 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: cba5397b72e280a6845c13b798897d3e46e94453
+ms.openlocfilehash: cecc51d51ea738d577893f372750e7f49bec3378
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30095434"
+ms.locfileid: "30116022"
 items:
-- uid: excel.Excel.IconCollections
+- uid: excel_release.Excel.IconCollections
   name: Excel.IconCollections
   fullName: Excel.IconCollections
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.IconCollections.fiveArrows
-  - excel.Excel.IconCollections.fiveArrowsGray
-  - excel.Excel.IconCollections.fiveBoxes
-  - excel.Excel.IconCollections.fiveQuarters
-  - excel.Excel.IconCollections.fiveRating
-  - excel.Excel.IconCollections.fourArrows
-  - excel.Excel.IconCollections.fourArrowsGray
-  - excel.Excel.IconCollections.fourRating
-  - excel.Excel.IconCollections.fourRedToBlack
-  - excel.Excel.IconCollections.fourTrafficLights
-  - excel.Excel.IconCollections.threeArrows
-  - excel.Excel.IconCollections.threeArrowsGray
-  - excel.Excel.IconCollections.threeFlags
-  - excel.Excel.IconCollections.threeSigns
-  - excel.Excel.IconCollections.threeStars
-  - excel.Excel.IconCollections.threeSymbols
-  - excel.Excel.IconCollections.threeSymbols2
-  - excel.Excel.IconCollections.threeTrafficLights1
-  - excel.Excel.IconCollections.threeTrafficLights2
-  - excel.Excel.IconCollections.threeTriangles
-- uid: excel.Excel.IconCollections.fiveArrows
+  - excel_release.Excel.IconCollections.fiveArrows
+  - excel_release.Excel.IconCollections.fiveArrowsGray
+  - excel_release.Excel.IconCollections.fiveBoxes
+  - excel_release.Excel.IconCollections.fiveQuarters
+  - excel_release.Excel.IconCollections.fiveRating
+  - excel_release.Excel.IconCollections.fourArrows
+  - excel_release.Excel.IconCollections.fourArrowsGray
+  - excel_release.Excel.IconCollections.fourRating
+  - excel_release.Excel.IconCollections.fourRedToBlack
+  - excel_release.Excel.IconCollections.fourTrafficLights
+  - excel_release.Excel.IconCollections.threeArrows
+  - excel_release.Excel.IconCollections.threeArrowsGray
+  - excel_release.Excel.IconCollections.threeFlags
+  - excel_release.Excel.IconCollections.threeSigns
+  - excel_release.Excel.IconCollections.threeStars
+  - excel_release.Excel.IconCollections.threeSymbols
+  - excel_release.Excel.IconCollections.threeSymbols2
+  - excel_release.Excel.IconCollections.threeTrafficLights1
+  - excel_release.Excel.IconCollections.threeTrafficLights2
+  - excel_release.Excel.IconCollections.threeTriangles
+- uid: excel_release.Excel.IconCollections.fiveArrows
   name: fiveArrows
   fullName: fiveArrows
   langs:
@@ -45,7 +45,7 @@ items:
     return:
       type:
       - FiveArrowsSet
-- uid: excel.Excel.IconCollections.fiveArrowsGray
+- uid: excel_release.Excel.IconCollections.fiveArrowsGray
   name: fiveArrowsGray
   fullName: fiveArrowsGray
   langs:
@@ -56,7 +56,7 @@ items:
     return:
       type:
       - FiveArrowsGraySet
-- uid: excel.Excel.IconCollections.fiveBoxes
+- uid: excel_release.Excel.IconCollections.fiveBoxes
   name: fiveBoxes
   fullName: fiveBoxes
   langs:
@@ -67,7 +67,7 @@ items:
     return:
       type:
       - FiveBoxesSet
-- uid: excel.Excel.IconCollections.fiveQuarters
+- uid: excel_release.Excel.IconCollections.fiveQuarters
   name: fiveQuarters
   fullName: fiveQuarters
   langs:
@@ -78,7 +78,7 @@ items:
     return:
       type:
       - FiveQuartersSet
-- uid: excel.Excel.IconCollections.fiveRating
+- uid: excel_release.Excel.IconCollections.fiveRating
   name: fiveRating
   fullName: fiveRating
   langs:
@@ -89,7 +89,7 @@ items:
     return:
       type:
       - FiveRatingSet
-- uid: excel.Excel.IconCollections.fourArrows
+- uid: excel_release.Excel.IconCollections.fourArrows
   name: fourArrows
   fullName: fourArrows
   langs:
@@ -100,7 +100,7 @@ items:
     return:
       type:
       - FourArrowsSet
-- uid: excel.Excel.IconCollections.fourArrowsGray
+- uid: excel_release.Excel.IconCollections.fourArrowsGray
   name: fourArrowsGray
   fullName: fourArrowsGray
   langs:
@@ -111,7 +111,7 @@ items:
     return:
       type:
       - FourArrowsGraySet
-- uid: excel.Excel.IconCollections.fourRating
+- uid: excel_release.Excel.IconCollections.fourRating
   name: fourRating
   fullName: fourRating
   langs:
@@ -122,7 +122,7 @@ items:
     return:
       type:
       - FourRatingSet
-- uid: excel.Excel.IconCollections.fourRedToBlack
+- uid: excel_release.Excel.IconCollections.fourRedToBlack
   name: fourRedToBlack
   fullName: fourRedToBlack
   langs:
@@ -133,7 +133,7 @@ items:
     return:
       type:
       - FourRedToBlackSet
-- uid: excel.Excel.IconCollections.fourTrafficLights
+- uid: excel_release.Excel.IconCollections.fourTrafficLights
   name: fourTrafficLights
   fullName: fourTrafficLights
   langs:
@@ -144,7 +144,7 @@ items:
     return:
       type:
       - FourTrafficLightsSet
-- uid: excel.Excel.IconCollections.threeArrows
+- uid: excel_release.Excel.IconCollections.threeArrows
   name: threeArrows
   fullName: threeArrows
   langs:
@@ -155,7 +155,7 @@ items:
     return:
       type:
       - ThreeArrowsSet
-- uid: excel.Excel.IconCollections.threeArrowsGray
+- uid: excel_release.Excel.IconCollections.threeArrowsGray
   name: threeArrowsGray
   fullName: threeArrowsGray
   langs:
@@ -166,7 +166,7 @@ items:
     return:
       type:
       - ThreeArrowsGraySet
-- uid: excel.Excel.IconCollections.threeFlags
+- uid: excel_release.Excel.IconCollections.threeFlags
   name: threeFlags
   fullName: threeFlags
   langs:
@@ -177,7 +177,7 @@ items:
     return:
       type:
       - ThreeFlagsSet
-- uid: excel.Excel.IconCollections.threeSigns
+- uid: excel_release.Excel.IconCollections.threeSigns
   name: threeSigns
   fullName: threeSigns
   langs:
@@ -188,7 +188,7 @@ items:
     return:
       type:
       - ThreeSignsSet
-- uid: excel.Excel.IconCollections.threeStars
+- uid: excel_release.Excel.IconCollections.threeStars
   name: threeStars
   fullName: threeStars
   langs:
@@ -199,7 +199,7 @@ items:
     return:
       type:
       - ThreeStarsSet
-- uid: excel.Excel.IconCollections.threeSymbols
+- uid: excel_release.Excel.IconCollections.threeSymbols
   name: threeSymbols
   fullName: threeSymbols
   langs:
@@ -210,7 +210,7 @@ items:
     return:
       type:
       - ThreeSymbolsSet
-- uid: excel.Excel.IconCollections.threeSymbols2
+- uid: excel_release.Excel.IconCollections.threeSymbols2
   name: threeSymbols2
   fullName: threeSymbols2
   langs:
@@ -221,7 +221,7 @@ items:
     return:
       type:
       - ThreeSymbols2Set
-- uid: excel.Excel.IconCollections.threeTrafficLights1
+- uid: excel_release.Excel.IconCollections.threeTrafficLights1
   name: threeTrafficLights1
   fullName: threeTrafficLights1
   langs:
@@ -232,7 +232,7 @@ items:
     return:
       type:
       - ThreeTrafficLights1Set
-- uid: excel.Excel.IconCollections.threeTrafficLights2
+- uid: excel_release.Excel.IconCollections.threeTrafficLights2
   name: threeTrafficLights2
   fullName: threeTrafficLights2
   langs:
@@ -243,7 +243,7 @@ items:
     return:
       type:
       - ThreeTrafficLights2Set
-- uid: excel.Excel.IconCollections.threeTriangles
+- uid: excel_release.Excel.IconCollections.threeTriangles
   name: threeTriangles
   fullName: threeTriangles
   langs:
