--- a/docs/docs-ref-autogen/excel_release/excel.threearrowsset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.threearrowsset.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 24da4e187072a1746b50713f6c2d528a8cd119e4
+ms.openlocfilehash: 90de4f1034102074856698072352b764b8f56b1c
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30095252"
+ms.locfileid: "30117366"
 items:
-- uid: excel.Excel.ThreeArrowsSet
+- uid: excel_release.Excel.ThreeArrowsSet
   name: Excel.ThreeArrowsSet
   fullName: Excel.ThreeArrowsSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.ThreeArrowsSet.greenUpArrow
-  - excel.Excel.ThreeArrowsSet.redDownArrow
-  - excel.Excel.ThreeArrowsSet.yellowSideArrow
-- uid: excel.Excel.ThreeArrowsSet.greenUpArrow
+  - excel_release.Excel.ThreeArrowsSet.greenUpArrow
+  - excel_release.Excel.ThreeArrowsSet.redDownArrow
+  - excel_release.Excel.ThreeArrowsSet.yellowSideArrow
+- uid: excel_release.Excel.ThreeArrowsSet.greenUpArrow
   name: greenUpArrow
   fullName: greenUpArrow
   langs:
@@ -28,7 +28,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeArrowsSet.redDownArrow
+- uid: excel_release.Excel.ThreeArrowsSet.redDownArrow
   name: redDownArrow
   fullName: redDownArrow
   langs:
@@ -39,7 +39,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeArrowsSet.yellowSideArrow
+- uid: excel_release.Excel.ThreeArrowsSet.yellowSideArrow
   name: yellowSideArrow
   fullName: yellowSideArrow
   langs:
