--- a/docs/docs-ref-autogen/excel_release/excel.threetrianglesset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.threetrianglesset.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a42498f6c06ed6f9755e6d4003d00ef7cf84357f
+ms.openlocfilehash: d7d8f7568129f160505e41cb03721cc0c5f4e249
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30094720"
+ms.locfileid: "30106971"
 items:
-- uid: excel.Excel.ThreeTrianglesSet
+- uid: excel_release.Excel.ThreeTrianglesSet
   name: Excel.ThreeTrianglesSet
   fullName: Excel.ThreeTrianglesSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.ThreeTrianglesSet.greenUpTriangle
-  - excel.Excel.ThreeTrianglesSet.redDownTriangle
-  - excel.Excel.ThreeTrianglesSet.yellowDash
-- uid: excel.Excel.ThreeTrianglesSet.greenUpTriangle
+  - excel_release.Excel.ThreeTrianglesSet.greenUpTriangle
+  - excel_release.Excel.ThreeTrianglesSet.redDownTriangle
+  - excel_release.Excel.ThreeTrianglesSet.yellowDash
+- uid: excel_release.Excel.ThreeTrianglesSet.greenUpTriangle
   name: greenUpTriangle
   fullName: greenUpTriangle
   langs:
@@ -28,7 +28,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeTrianglesSet.redDownTriangle
+- uid: excel_release.Excel.ThreeTrianglesSet.redDownTriangle
   name: redDownTriangle
   fullName: redDownTriangle
   langs:
@@ -39,7 +39,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.ThreeTrianglesSet.yellowDash
+- uid: excel_release.Excel.ThreeTrianglesSet.yellowDash
   name: yellowDash
   fullName: yellowDash
   langs:
